--- a/client/package.json
+++ b/client/package.json
@@ -2,9 +2,10 @@
   "name": "client",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "src/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node --watch src/app.js"
   },
   "repository": {
     "type": "git",
